added html and css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="../mtm6201-midterm/images/logo.png" alt="Logo" class="pic">
                 </div>
                 <ul>
-                    <li class="current"><a href="home.html">Home</a></li>
+                    <li class="current"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul> 
